sample/retrieveUnpackaged/objects/Segment_Usage_Quartile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Lower_Bound_KL_day__c</fullName>
        <label>Lower Bound (KL/day)</label>
        <precision>13</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quartile__c</fullName>
        <label>Quartile</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Residential or Non-Residential</inlineHelpText>
        <label>Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Bound_KL_day__c</fullName>
        <label>Upper Bound (KL/day)</label>
        <precision>13</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Segment Usage Quartile</label>
</CustomObject>